Enhance Comicvine metadata parsing and error handling (#835)